<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FellowAlarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Add your app id -->
    <string name="gcp_app_id">0</string>
    <string name="add">add</string>
    <string name="no_alarm">Currently no alarm</string>
    <string name="delete_alarm">delete alarm</string>
    <string name="contact">get</string>
    <string name="set_snooze">Set snooze</string>
    <string name="now">Now: </string>
    <string name="settime">Set alarm time:</string>
    <string name="title_activity_add_number">AddNumberActivity</string>
    <string name="add_phone">Add phone number</string>
    <string name="check">Check</string>
    <string name="contacts">Contacts</string>
    <string name="set_alarm">set alarm</string>
    <string name="help">Help</string>
    <string name="typephonemsg">Type someone\'s phone number.</string>
    <string name="perlab">permlabel_preventpower</string>
    <string name="perdes">permdesc_preventpower</string>

</resources>
