<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">




    <item
        android:id="@+id/action_get"
        android:icon="@drawable/ic_action_action_account_box"
        android:title="@string/contacts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_check"
        android:icon="@drawable/ic_action_communication_live_help"
        android:title="@string/check"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_content_add"
        android:title="@string/add_phone"
        app:showAsAction="ifRoom"/>
    <!--<item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_content_add_circle_outline"
        android:title="@string/add"
        app:showAsAction="never"/>-->



    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/set_snooze"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
